[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/HUD/health bar/health_branca.png" type="Texture" id=2]
[ext_resource path="res://Sprites/HUD/health bar/health_cinza.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/health bar/health_transparente.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Bangers-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/HUD/health bar/mana_cinza.png" type="Texture" id=6]
[ext_resource path="res://Sprites/HUD/health bar/mana_transparente.png" type="Texture" id=7]
[ext_resource path="res://Sprites/HUD/health bar/mana_branca.png" type="Texture" id=8]
[ext_resource path="res://Sprites/HUD/health bar/gre_rect.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame11.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame12.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame4.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame5.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame8.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame7.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame3.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Sprites Jogo/Potion/flame9.png" type="Texture" id=20]
[ext_resource path="res://Fonts/Girassol-Regular.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Sons/SFX/soul_collected.ogg" type="AudioStream" id=22]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "flame",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 21 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.598724
margin_top = -0.598732
margin_right = -0.598755
margin_bottom = -0.598755
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_left = 55.6461
margin_top = 24.48
margin_right = 655.646
margin_bottom = 224.48
rect_scale = Vector2( 0.698, 0.698 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_under = Color( 0.341176, 0.32549, 0.32549, 1 )
tint_progress = Color( 0.658824, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = 55.6465
margin_top = 24.4796
margin_right = 655.646
margin_bottom = 224.48
rect_scale = Vector2( 0.7, 0.7 )
value = 100.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.0196078, 0.337255, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Healthbar"]
margin_left = 55.0
margin_top = 21.0999
margin_right = 225.0
margin_bottom = 55.0999
rect_scale = Vector2( 1.87741, 0.750277 )
custom_fonts/font = SubResource( 1 )
text = "Health     100/100"

[node name="StaminaUnder" type="TextureProgress" parent="."]
modulate = Color( 0.901961, 0.529412, 0.121569, 1 )
margin_left = 57.5541
margin_top = 38.0955
margin_right = 565.554
margin_bottom = 114.096
rect_scale = Vector2( 0.698, 0.698 )
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Staminabar" type="TextureProgress" parent="."]
margin_left = 57.5538
margin_top = 38.0952
margin_right = 565.554
margin_bottom = 114.095
rect_scale = Vector2( 0.7, 0.7 )
value = 100.0
texture_progress = ExtResource( 8 )
tint_progress = Color( 0.447059, 0.870588, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="FlashTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]

[node name="grey_rect" type="Sprite" parent="."]
position = Vector2( 58.4961, 59.1763 )
scale = Vector2( 0.589321, 0.517067 )
texture = ExtResource( 9 )

[node name="Soul" type="AnimatedSprite" parent="."]
position = Vector2( 921.008, 20.7784 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "flame"
frame = 5
speed_scale = 2.0
playing = true

[node name="Soul_Counter" type="Label" parent="Soul"]
margin_left = 159.188
margin_top = -13.2635
margin_right = 349.188
margin_bottom = 178.737
custom_fonts/font = SubResource( 3 )
text = "x 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -15.0
